Mensaje de no hay documentos

--- a/app/translations/locale-es.json
+++ b/app/translations/locale-es.json
@@ -11,7 +11,7 @@
   },
   "level":{
     "initial": "Inicial",
-    "medium": "Medio",
+    "intermediate": "Intermedio",
     "advanced": "Avanzado"
   },
   "language":{
