--- a/app/translations/locale-es.json
+++ b/app/translations/locale-es.json
@@ -1,4 +1,47 @@
 {
+  "header":{
+    "my_profile": "Mi perfil",
+    "logout": "Salir"
+  },
+  "footer": {
+    "contact_us": "Contactanos",
+    "send_your_suggest": "Enviamos tu duda o surgerencia a",
+    "copyright": "Todos los derechos reservados.",
+    "privacy": "Políticas de privacidad",
+    "terms_and_conditions": "Términos y condiciones"
+  },
+  "login": {
+    "user_placeholder": "Ingrese su usuario",
+    "password_placeholder": "Ingrese su password",
+    "login_text": "Ingresar",
+    "login_text_social": "O ingresar con",
+    "register_text": "Aún no tengo una cuenta"
+  },
+  "register": {
+    "title": "Registro",
+    "user_placeholder": "Ingrese su usuario",
+    "email_placeholder": "Ingrese su email",
+    "password_placeholder": "Ingrese su password",
+    "password_repeat_placeholder": "Repita el password",
+    "register_button": "Registrarse",
+    "register_text_social": "O ingresar con"
+  },
+  "home":{
+    "text_slider_1": "¡Encontrá el material que buscás!",
+    "text_slider_2": "¡Compartí tu material con otros!",
+    "text_slider_3": "¡Formá parte y obtené beneficios!",
+    "search_placeholder": "¿Qué estás buscando?",
+    "search_button":"Buscar",
+    "subjects_outstanding": "Materias populares",
+    "find_text": "Encontrá lo que buscás",
+    "how_works_title": "¿Cómo funciona?",
+    "how_works_subtitle_1": "Encontrá lo que<br/>buscás",
+    "how_works_text_1":"Hubin cuenta con información de calidad al servicio de la comunidad.<br/>Encontrá en nuestro catálogo lo que estás buscando!",
+    "how_works_subtitle_2":"Compartí tu material <br/>con la comunidad",
+    "how_works_text_2": "La comunidad es el bien más valioso de Hubin y nuestro catálogo se nutre de ella.<br>¡Compartí tu material y sé parte!",
+    "how_works_subtitle_3": "Participá y obtené<br/>beneficios",
+    "how_works_text_3": "Subí material, puntuá material existente y denunciá plagio o material inadecuado.<br/> ¡Participá en Hubin y obtené beneficios!"
+  },
   "subject":{
     "biology": "Biología",
     "computer": "Computación",
@@ -32,7 +75,23 @@
     "filter_section_entity": "Entidades educativas",
     "filter_section_subject": "Materias",
     "filter_section_language": "Idiomas",
-    "filter_section_level": "Niveles"
+    "filter_section_level": "Niveles",
+    "without_filters": "Sin filtros",
+    "without_documents": "No se encontraron documentos con los filtros especificados."
+  },
+  "user": {
+    "edit_profile" : "Editar perfil",
+    "finish_edit_profile": "Terminar edicion de perfil",
+    "input_your_email":"Ingrese su email",
+    "input_your_name":"Ingrese su nombre",
+    "input_your_description":"Ingrese su descripcion",
+    "medals_title": "Medallas",
+    "my_documents":"Mis documentos",
+    "without_documents": "No tiene documentos subidos.",
+    "my_activity": "Mi actividad",
+    "without_activity": "No tiene actividad reciente.",
+    "my_favs": "Mi favoritos",
+    "without_favs":"No tiene documentos favoritos."
   }
 
 }
