Integro alta de documentos y update. Falta integrar el file de update

--- a/app/translations/locale-es.json
+++ b/app/translations/locale-es.json
@@ -1,6 +1,7 @@
 {
   "header":{
     "my_profile": "Mi perfil",
+    "load_document": "Nuevo documento",
     "logout": "Salir"
   },
   "footer": {
