Separo perfil publico del editable por el usuario. Directiva de comentarios

--- a/app/translations/locale-en.json
+++ b/app/translations/locale-en.json
@@ -146,5 +146,8 @@
     "placeholder_message": "What is your complaint?",
     "cancel": "Cancel",
     "send": "Send"
+  },
+  "document_item": {
+    "uploaded_by": "Uploaded by"
   }
 }
